[project]
name = "my-claude-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "loguru>=0.7.3",
    "pydantic-ai>=0.1.1",
    "pyperclip>=1.9.0",
    "traceloop-sdk>=0.39.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dev-agent = "main:cli_entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["main.py", "src/"]
